src/objects/sfLma__Package_Version__c.object
<CustomObject>
    <description>This object represents a specific version of a package uploaded by the developer to the AppExchange. Licenses relate to this object, since a user has a specific version installed in their Salesforce organization.</description>
    <fields>
        <fullName>Active_License_Count__c</fullName>
        <inlineHelpText>Total number of active licenses for this package version. This value is calculated nightly via apex.</inlineHelpText>
        <label>Active License Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BT_Global_Package_Version__c</fullName>
        <formula>HYPERLINK(&quot;https://na1.salesforce.com/_ui/core/allpackageversion/GlobalPackageVersionUi/d?id=&quot; &amp;  sfLma__Version_ID__c &amp; &quot;&amp;retURL=/_ui/core/allpackageversion/GlobalPackageVersionUi/d&amp;maxInstalledVersionRows=5000&quot;, &quot;BT Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BT Global Package Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Version__c</fullName>
        <formula>IF(sfLma__Package__r.sfLma__Latest_Version__c = sfLma__Version__c  ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Latest Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Install_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://login.salesforce.com/?startURL=%2Fpackaging%2FinstallPackage.apexp%3Fp0%3D&quot;&amp; sfLma__Version_ID__c , &quot;Install Link&quot;)</formula>
        <label>Package Install Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_package_version_details.htm&quot;, &quot;Help for Package Version&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Is_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks if the version is beta or has been released</description>
        <label>Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfLma__Package__c</fullName>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipName>R00N30000001JvR7EAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfLma__Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Sequence__c</fullName>
        <description>Package version sequence</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfLma__Version_ID__c</fullName>
        <label>Version ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Package Version</label>
    <listViews>
        <fullName>Contacts_and_Orgs</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Release_Date__c</columns>
        <columns>sfLma__Version__c</columns>
        <columns>sfLma__Version_ID__c</columns>
        <columns>Latest_Version__c</columns>
        <columns>sfLma__Package__c</columns>
        <columns>Active_License_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sfLma__Package__c</field>
            <operation>equals</operation>
            <value>Contacts &amp; Organizations</value>
        </filters>
        <label>Contacts and Orgs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Households_Packages</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Release_Date__c</columns>
        <columns>sfLma__Version_ID__c</columns>
        <columns>Latest_Version__c</columns>
        <columns>sfLma__Package__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sfLma__Package__c</field>
            <operation>equals</operation>
            <value>Households</value>
        </filters>
        <label>Households Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sfLma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Package Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>